--- a/lodocha.html
+++ b/lodocha.html
@@ -8,25 +8,23 @@
 
 
 <body>
-
+<header>
 
     <div class="three">
         <h1>Богатыри </h1>
     </div>
-    <a href="/">
 
 
-        <div class="menu">
-            <nav>
+        
+            <nav class="menu">
                 <ul class="top-menu">
-                    <li><a href="/home/"></a></li>
                     <li class="active"><a href="index.html">богатыри</a></li></li>
                     <li><a href="omgg.htm">одеяния</a></li>
-                    <li><a href="">былины </a></li>
+                    <li><a href="lodocha.html">былины </a></li>
 
                 </ul>
             </nav>
-
+        </header>
 
             <main>
 <h4>Былины о боготырях.</h4>
