--- a/omgg.htm
+++ b/omgg.htm
@@ -8,25 +8,23 @@
 
 
 <body>
-
+<header>
 
     <div class="three">
         <h1>Богатыри</h1>
     </div>
-    <a href="/">
+  
 
-
-        <div class="menu">
-            <nav>
+            <nav class="menu">
                 <ul class="top-menu">
-                    <li><a href="/home/"></a></li>
                     <li class="active"><a href="index.html">богатыри</a></li></li>
-                    <li><a href="">одеяния </a></li>
+                    <li><a href="omgg.htm">одеяния </a></li>
                     <li><a href="lodocha.html"> былины </a></li>
                     
                 </ul>
             </nav>
-        </div>
+
+        </header>
 <main>
     <h4>В чем и с чем ходили богатыри</h4>
     <div class="container">
@@ -50,7 +48,7 @@
 
     <div class="pictur">
 
-     <img src="https://o.remove.bg/downloads/93d8511e-f058-4f4f-ad9a-ca8c783649c2/1a338bfec17f2e230275b6102bbbfdb8-removebg-preview.png" >
+     <img src="https://img.icons8.com/ios/452/double-down.png" >
 
 
     <div>
